# Procurans

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.user.f273485  CMakeLists.txt.user.win  CMakeSettings.json  LICENSE  Procurans.ini  Procurans_it_IT.ts  README.md  application.qrc  columntype.h  gridschemaitem.cpp  gridschemaitem.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  odsadder.cpp  odsadder.h  odscell.h  odsdocument.cpp  odsfile.cpp  odsfile.h  settings.cpp  settings.h
generale/: NL10209790152_1nHFS.xml
main/: CMakeLists.txt  LICENSE.spdx  Logger.cpp  application.qrc  bankaccountsdialog.cpp  bankaccountsdialog.h  comboboxitemdelegate.cpp  comboboxitemdelegate.h  fileinfo.rc.in  gridschemafield.cpp  gridschemafield.h  license.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  odscell.cpp  odscell.h  odsdocument.cpp  odsdocument.h  odsfile.cpp  odsfile.h  settings.cpp  settings.h
main/generale/: IT0000001021160328_04mYS.xml  IT00192920130_00B4V.xml  IT01315910131_00468.xml  IT01315910131_00469.xml  IT01315910131_00476.xml  IT01315910131_00477.xml  IT01315910131_00478.xml  IT01315910131_00479.xml  IT01315910131_00480.xml  IT01378570350_QBul7.xml  IT01641790702_lBTqi.xml  IT01641790702_lH0n6.xml  IT02267610968_00FM2.xml  IT02355260981_3yMnc.xml  IT02355260981_5NUy2.xml  IT02663950984_sNq3k.xml  IT03696510134_00087.xml  IT04030410288_72npB.xml  IT04030410288_78u5f.xml  IT07945211006_FWR7Q.xml  NL10209790152_2IfNG.xml
main/generale/FATTURE/: Fatt. MODELLO.ods
main/generale/Mastrini fornitori/: Mastrino MODELLO.ods
main/generale/Prima Nota/: PrimaNota MODELLO.ods
main/generale/Scadenziario RIBA/: Scadenziario MODELLO.ods
ods/: CMakeLists.txt  CellAbstract.cpp  CellAbstract.h  CellCurrency.cpp  CellCurrency.h  CellDate.cpp  CellDate.h  CellEmpty.cpp  CellEmpty.h  CellFloat.cpp  CellFloat.h  CellString.cpp  CellString.h  Column.cpp  Column.h  Document.cpp  Document.h  FileAbstract.cpp  FileAbstract.h  FileContent.cpp  FileContent.h  Logger.cpp  RepeatableAbstract.cpp  RepeatableAbstract.h  Row.cpp  Row.h  SerializableAbstract.cpp  SerializableAbstract.h  StyleableAbstract.cpp  StyleableAbstract.h  Table.cpp  Table.h  filelist.txt  functions.cpp  functions.h  logger.cpp  logger.h  odscell.cpp  odscell.h  odscellcurrency.cpp  (+27 more)
qfatturapa/: CMakeLists.txt  codelists.cpp  codelists.h  invoiceparser.cpp  invoiceparser.h  invoicetypes.cpp  invoicetypes.h
qfatturapa/tests/: CMakeLists.txt  test_invoiceparser.cpp
qoasis/: CMakeLists.txt  currency.cpp  currency.h  filecontent.cpp  filecontent.h  fileods.cpp  fileods.h  filexml.cpp  filexml.h  ifileable.cpp  ifileable.h  inameable.cpp  inameable.h  irepeatable.cpp  irepeatable.h  istyleable.cpp  istyleable.h  repeatvector.h  tag.cpp  tag.h
qoasis/office/: body.cpp  body.h  documentcontent.cpp  documentcontent.h  spreadsheet.cpp  spreadsheet.h
qoasis/style/: style.cpp  style.h
qoasis/table/: table.cpp  table.h  tablecell.cpp  tablecell.h  tablecellboolean.cpp  tablecellboolean.h  tablecellcovered.cpp  tablecellcovered.h  tablecellcurrency.cpp  tablecellcurrency.h  tablecelldate.cpp  tablecelldate.h  tablecellempty.cpp  tablecellempty.h  tablecellfloat.cpp  tablecellfloat.h  tablecellpercentage.cpp  tablecellpercentage.h  tablecellstring.cpp  tablecellstring.h  tablecelltime.cpp  tablecelltime.h  tablecolumn.cpp  tablecolumn.h  tablerow.cpp  tablerow.h
qoasis/tests/: CMakeLists.txt  test_currency.cpp  test_fileods_roundtrip.cpp  test_repeatvector.cpp  test_tablecell.cpp  test_tablecolumn.cpp  test_tag.cpp
qoasis/text/: p.h
qoasis/xsd/: decimal.h  positiveinteger.h
quazip/: CMakeLists.txt  JlCompress.h  crypt.h  ioapi.h  unzip.h  zip.h
winsetup/: Procurans.vdproj
zlib/: CMakeLists.txt  crc32.c
zlib/contrib/blast/: blast.c
zlib/contrib/infback9/: infback9.c  inftree9.c  inftree9.h
zlib/contrib/minizip/: crypt.h  unzip.c  zip.c
zlib/contrib/puff/: puff.c
zlib/examples/: enough.c
zlib/test/: infcover.c
